Add row and column info about all nine .csv files to brainstorming.md and create Jupyter notebook for exploratory data analysis

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -29,11 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "59a8da01-b204-4725-9a1c-803e7e15eb65",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Contract Type', 'Provider ID', 'Program Name', 'Sponsor Name',\n",
+       "       'Program Address', 'Program Borough', 'Program Zipcode',\n",
+       "       'Program Phone'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acp = pd.read_csv('raw_csv/all_contracted_providers.csv')\n",
+    "blb = pd.read_csv('raw_csv/bottom_line_budget.csv')\n",
+    "bs = pd.read_csv('raw_csv/budgeted_services.csv')\n",
+    "cpe = pd.read_csv('raw_csv/contracted_providers_expanded.csv')\n",
+    "re = pd.read_csv('raw_csv/reported_expenditures.csv')\n",
+    "rsu = pd.read_csv('raw_csv/reported_service_units.csv')\n",
+    "sccd = pd.read_csv('raw_csv/senior_center_client_data_fy2020.csv')\n",
+    "scpd = pd.read_csv('raw_csv/senior_center_provider_data_fy2020.csv')\n",
+    "sadcs = pd.read_csv('raw_csv/social_adult_day_care_services.csv')"
+   ]
   }
  ],
  "metadata": {
