--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -262,6 +262,264 @@
     "#### What are my numerical columns:\n",
     "* `ReportedAmount`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72f1e811-fa7f-406c-add7-19193e6738a1",
+   "metadata": {},
+   "source": [
+    "## Exploring Senior Center Client Data\n",
+    "`senior_center_client_data_fy2020.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "004597f9-4aae-4318-bf74-23aadc0712a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 69156 entries, 0 to 69155\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   dftaid           69156 non-null  object\n",
+      " 1   provider_name    69156 non-null  object\n",
+      " 2   service_date     69156 non-null  object\n",
+      " 3   total_daily      69156 non-null  int64 \n",
+      " 4   breakfast_units  69156 non-null  int64 \n",
+      " 5   lunch_units      69156 non-null  int64 \n",
+      " 6   dinner_units     69156 non-null  int64 \n",
+      " 7   tot_meals        69156 non-null  int64 \n",
+      " 8   aib_tot          69156 non-null  int64 \n",
+      " 9   sce_tot          69156 non-null  int64 \n",
+      " 10  hpp_tot          69156 non-null  int64 \n",
+      " 11  tot_serv_pp      69156 non-null  int64 \n",
+      "dtypes: int64(9), object(3)\n",
+      "memory usage: 6.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sccd.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3b1a89e0-9a7a-4ca8-b1bc-c1a242e2933d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dftaid\n",
+      "35D01    342\n",
+      "35K01    338\n",
+      "64901    323\n",
+      "350      315\n",
+      "45T01    307\n",
+      "        ... \n",
+      "35B02    179\n",
+      "3AP04    160\n",
+      "23F02    118\n",
+      "12H03    104\n",
+      "41G01     10\n",
+      "Length: 287, dtype: int64\n",
+      "\n",
+      "provider_name\n",
+      "Senior Center - Carter Burden Covello ISC    342\n",
+      "Senior Center - Lenox Hill Innovative        338\n",
+      "Senior Center - SAGE Innovative              323\n",
+      "Senior Center - Sirovich ISC                 315\n",
+      "Senior Center - Selfhelp Innovative          307\n",
+      "                                            ... \n",
+      "Senior Center - A. Philip Randolph           179\n",
+      "Senior Center - SAGE Staten Island           160\n",
+      "Senior Center - Armstrong Senior Program     118\n",
+      "Senior Center - RAIN Bailey                  104\n",
+      "Senior Center - CCNS Hillcrest                10\n",
+      "Length: 287, dtype: int64\n",
+      "\n",
+      "service_date\n",
+      "01/15/2020    286\n",
+      "07/31/2019    286\n",
+      "07/10/2019    286\n",
+      "01/29/2020    286\n",
+      "10/30/2019    285\n",
+      "             ... \n",
+      "08/11/2019     11\n",
+      "10/20/2019     10\n",
+      "09/29/2019      9\n",
+      "12/01/2019      8\n",
+      "09/01/2019      7\n",
+      "Length: 366, dtype: int64\n",
+      "\n",
+      "total_daily\n",
+      "1      1378\n",
+      "2       776\n",
+      "6       635\n",
+      "3       626\n",
+      "5       612\n",
+      "       ... \n",
+      "565       1\n",
+      "579       1\n",
+      "581       1\n",
+      "583       1\n",
+      "968       1\n",
+      "Length: 603, dtype: int64\n",
+      "\n",
+      "breakfast_units\n",
+      "0      51998\n",
+      "40       543\n",
+      "28       468\n",
+      "20       419\n",
+      "25       407\n",
+      "       ...  \n",
+      "194        1\n",
+      "192        1\n",
+      "184        1\n",
+      "157        1\n",
+      "222        1\n",
+      "Length: 200, dtype: int64\n",
+      "\n",
+      "lunch_units\n",
+      "0      19563\n",
+      "60      1022\n",
+      "50       661\n",
+      "70       653\n",
+      "40       640\n",
+      "       ...  \n",
+      "406        1\n",
+      "408        1\n",
+      "410        1\n",
+      "412        1\n",
+      "600        1\n",
+      "Length: 415, dtype: int64\n",
+      "\n",
+      "dinner_units\n",
+      "0      65751\n",
+      "12        85\n",
+      "7         83\n",
+      "9         82\n",
+      "10        80\n",
+      "       ...  \n",
+      "173        1\n",
+      "165        1\n",
+      "164        1\n",
+      "141        1\n",
+      "325        1\n",
+      "Length: 176, dtype: int64\n",
+      "\n",
+      "tot_meals\n",
+      "0      18008\n",
+      "60       782\n",
+      "70       565\n",
+      "50       542\n",
+      "55       516\n",
+      "       ...  \n",
+      "497        1\n",
+      "499        1\n",
+      "504        1\n",
+      "506        1\n",
+      "619        1\n",
+      "Length: 516, dtype: int64\n",
+      "\n",
+      "aib_tot\n",
+      "0      22866\n",
+      "1       9256\n",
+      "2       6333\n",
+      "3       4916\n",
+      "4       3978\n",
+      "       ...  \n",
+      "111        1\n",
+      "98         1\n",
+      "109        1\n",
+      "106        1\n",
+      "281        1\n",
+      "Length: 139, dtype: int64\n",
+      "\n",
+      "sce_tot\n",
+      "0      19402\n",
+      "6       1700\n",
+      "13      1530\n",
+      "12      1516\n",
+      "7       1472\n",
+      "       ...  \n",
+      "223        1\n",
+      "214        1\n",
+      "212        1\n",
+      "211        1\n",
+      "538        1\n",
+      "Length: 242, dtype: int64\n",
+      "\n",
+      "hpp_tot\n",
+      "0      22143\n",
+      "10      1484\n",
+      "11      1408\n",
+      "12      1375\n",
+      "14      1365\n",
+      "       ...  \n",
+      "253        1\n",
+      "262        1\n",
+      "266        1\n",
+      "267        1\n",
+      "497        1\n",
+      "Length: 275, dtype: int64\n",
+      "\n",
+      "tot_serv_pp\n",
+      "0      4345\n",
+      "1      1830\n",
+      "2      1141\n",
+      "21      920\n",
+      "28      894\n",
+      "       ... \n",
+      "284       1\n",
+      "331       1\n",
+      "408       1\n",
+      "407       1\n",
+      "693       1\n",
+      "Length: 455, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the unique values in each column, and count the number of rows for each unique value\n",
+    "for column in sccd.columns:\n",
+    "    print(f'{sccd.value_counts(column)}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21198f50-99f3-4a91-b8b6-0ed681da10ce",
+   "metadata": {},
+   "source": [
+    "#### What's in this dataset?\n",
+    "* Data is from one contract year, fiscal year 2020 (July 2019 - June 2020)\n",
+    "* 69,156 rows, 12 columns\n",
+    "* Each row is a specific date of participation at a specific senior center\n",
+    "* There are 287 programs (dftaid) of the provider/contract/service type Senior Centers\n",
+    "\n",
+    "#### What are my grouping/categorical columns:\n",
+    "* Needs to be derived --> Borough, ReportedMonth, SponsorName\n",
+    "\n",
+    "#### What are my numerical columns:\n",
+    "* `total_daily` (total clients service, i.e. instances of service, for service date)\n",
+    "* `tot_serv_pp` (total clients, i.e. number of people, that received services for date)\n",
+    "* `breakfasts_units` (total breakfast served for date)\n",
+    "* `lunch_units` (total lunch served for date)\n",
+    "* `dinner_units` (total dinner served for date)\n",
+    "* `tot_meals` (total meals served for date)\n",
+    "* `aib_tot` (total clients served for AIB service, i.e. Assistance, Information and Benefits, for date)\n",
+    "* `sce_tot` (total clients served for SCE service, i.e. Education, Recreation, Technology, for date)\n",
+    "* `hpp_tot` (total clients served for HPP service, i.e. Health Promotion (Evidence-Based and Non-Evidence-Based) for date)"
+   ]
   }
  ],
  "metadata": {
