Add data dictionary for senior_center_provider_data_fy2020.csv and explore columns in notebook

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "a6c96f47-c995-4578-ad1d-7a269f319a61",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "59a8da01-b204-4725-9a1c-803e7e15eb65",
    "metadata": {},
    "outputs": [],
@@ -60,185 +60,29 @@
    "metadata": {},
    "source": [
     "## Exploring Reported Expenditures\n",
-    "`raw_csv/reported_expenditures.csv`"
+    "`reported_expenditures.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "d93879d8-78c8-4611-8fcb-ed49d7c2e17c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 72720 entries, 0 to 72719\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   ProviderType    72720 non-null  object \n",
-      " 1   DFTA ID         72720 non-null  object \n",
-      " 2   ContractYear    72720 non-null  int64  \n",
-      " 3   SponsorName     72720 non-null  object \n",
-      " 4   ProgramName     72720 non-null  object \n",
-      " 5   LineItem        72720 non-null  int64  \n",
-      " 6   LineItemName    72720 non-null  object \n",
-      " 7   ReportedMonth   72720 non-null  object \n",
-      " 8   ReportedAmount  72720 non-null  float64\n",
-      "dtypes: float64(1), int64(2), object(6)\n",
-      "memory usage: 5.0+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "re.info()"
+    "# re.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "300d1ca0-daf7-4a83-b59b-43d8e84c33ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ProviderType\n",
-      "SENIOR CENTER CONTRACTS                              51120\n",
-      "NATURALLY OCCURING RETIREMENT COMMUNITY CONTRACTS     6435\n",
-      "CASE MANAGEMENT SERVICES CONTRACTS                    3975\n",
-      "HOME DELIVERED MEAL SERVICE CONTRACTS                 3960\n",
-      "CAREGIVER SERVICES CONTRACTS                          1815\n",
-      "TRANSPORTATION SERVICES CONTRACTS                     1470\n",
-      "HOMECARE SERVICES CONTRACTS                            900\n",
-      "LEGAL SERVICES CONTRACTS                               900\n",
-      "GERIATRIC MENTAL HEALTH SERVICES CONTRACTS             735\n",
-      "NEW YORK CONNECTS CONTRACTS                            690\n",
-      "CITY MEALS ADMINISTRATIVE SERVICES CONTRACTS           360\n",
-      "ELDER ABUSE SERVICES CONTRACTS                         360\n",
-      "dtype: int64\n",
-      "\n",
-      "DFTA ID\n",
-      "45A01    270\n",
-      "33V01    210\n",
-      "31701    210\n",
-      "34Y01    210\n",
-      "54501    210\n",
-      "        ... \n",
-      "15G01     90\n",
-      "64601     90\n",
-      "N4402     45\n",
-      "N3E02     15\n",
-      "N3E03     15\n",
-      "Length: 403, dtype: int64\n",
-      "\n",
-      "ContractYear\n",
-      "2019    72720\n",
-      "dtype: int64\n",
-      "\n",
-      "SponsorName\n",
-      "JEWISH ASSOCIATION FOR SERVICES FOR THE AGED                   7500\n",
-      "CATHOLIC CHARITIES NEIGHBORHOOD SERVICES INC                   3870\n",
-      "REGIONAL AID FOR INTERIM NEEDS INC                             3090\n",
-      "FORT GREENE COUNCIL                                            2535\n",
-      "RISEBORO COMMUNITY PARTNERSHIP INC                             2325\n",
-      "                                                               ... \n",
-      "MOBILIZATION FOR JUSTICE INC                                    180\n",
-      "MERRILL PARK CIVIC ASSOCIATION OF SPRINGFIELD GARDENS INC       180\n",
-      "MEALS ON WHEELS OF STATEN ISLAND INC                            180\n",
-      "LSNY-BRONX CORPORATION                                          180\n",
-      "YOUNG MENS AND YOUNG WOMENS HEBREW ASSOCIATION OF BORO PARK     180\n",
-      "Length: 128, dtype: int64\n",
-      "\n",
-      "ProgramName\n",
-      "SAGE HARLEM                                540\n",
-      "RAIN HOME DELIVERED MEALS                  360\n",
-      "CCNS HOME DELIVERED MEALS                  360\n",
-      "RIDGEWOOD BUSHWICK HOME DELIVERED MEALS    360\n",
-      "JASA HOME DELIVERED MEALS                  360\n",
-      "                                          ... \n",
-      "YM andYWHA Innovative Senior Center         90\n",
-      "YM&YWHA Innovative Senior Center            90\n",
-      "NORC WITHOUT WALLS                          45\n",
-      "ISABELLA GERIATRIC RIVER TERRACE NORC       15\n",
-      "EL CORAZON NNORC                            15\n",
-      "Length: 390, dtype: int64\n",
-      "\n",
-      "LineItem\n",
-      "3     4848\n",
-      "4     4848\n",
-      "5     4848\n",
-      "6     4848\n",
-      "7     4848\n",
-      "8     4848\n",
-      "9     4848\n",
-      "10    4848\n",
-      "11    4848\n",
-      "12    4848\n",
-      "14    4848\n",
-      "18    4848\n",
-      "81    4848\n",
-      "82    4848\n",
-      "83    4848\n",
-      "dtype: int64\n",
-      "\n",
-      "LineItemName\n",
-      "Catered Food/Disposables    4848\n",
-      "Communications              4848\n",
-      "Consultants                 4848\n",
-      "Equipment Rental            4848\n",
-      "Other Expenses              4848\n",
-      "Other Occupancy             4848\n",
-      "Personnel                   4848\n",
-      "Printing/Supplies           4848\n",
-      "Program Insurance           4848\n",
-      "Raw Food/Disposables        4848\n",
-      "Rent                        4848\n",
-      "Rent Usage Charges          4848\n",
-      "Travel                      4848\n",
-      "Utilities                   4848\n",
-      "Vehicles                    4848\n",
-      "dtype: int64\n",
-      "\n",
-      "ReportedMonth\n",
-      "Jun 2019    8190\n",
-      "Dec 2018    5895\n",
-      "Mar 2019    5895\n",
-      "Feb 2019    5880\n",
-      "Jan 2019    5880\n",
-      "Oct 2018    5880\n",
-      "Sep 2018    5880\n",
-      "Aug 2018    5865\n",
-      "Nov 2018    5865\n",
-      "Jul 2018    5850\n",
-      "Apr 2019    5820\n",
-      "May 2019    5820\n",
-      "dtype: int64\n",
-      "\n",
-      "ReportedAmount\n",
-      "0.00          37436\n",
-      "150.00          104\n",
-      "1500.00          72\n",
-      "250.00           67\n",
-      "845.96           67\n",
-      "              ...  \n",
-      "758.74            1\n",
-      "758.54            1\n",
-      "758.40            1\n",
-      "758.35            1\n",
-      "1067190.00        1\n",
-      "Length: 26322, dtype: int64\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Get the unique values in each column, and count the number of rows for each unique value\n",
-    "for column in re.columns:\n",
-    "    print(f'{re.value_counts(column)}\\n')"
+    "# # Get the unique values in each column, and count the number of rows for each unique value\n",
+    "# for column in re.columns:\n",
+    "#     print(f'{re.value_counts(column)}\\n')"
    ]
   },
   {
@@ -250,7 +94,7 @@
     "* Data is from one contract year, fiscal year 2019 (July 2018 - June 2019)\n",
     "* 72,720 rows, 9 columns\n",
     "* Each row is an expenditure (i.e. reported line item) associated with a specific NYC Aging program for a given month\n",
-    "* There are 403 different programs (DFTA ID), sponsored by 128 partner organizations\n",
+    "* There are 403 different programs (`DFTA ID`), sponsored by 128 partner organizations\n",
     "    * These programs fall into 12 different contract types (i.e. types of services)\n",
     "        * Senior Centers, Naturally-Occurring Retirement Communities, Case Management Agencies, Home-Delivered Meal Programs, Caregiver Services, Transportation Services, Home-Care Services, Legal Services, Mental Health Services, New York Connects Services, City Meals Administrative Services, Elder Abuse Programs\n",
     "* Expenditures fall into 15 categories\n",
@@ -274,225 +118,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "004597f9-4aae-4318-bf74-23aadc0712a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 69156 entries, 0 to 69155\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column           Non-Null Count  Dtype \n",
-      "---  ------           --------------  ----- \n",
-      " 0   dftaid           69156 non-null  object\n",
-      " 1   provider_name    69156 non-null  object\n",
-      " 2   service_date     69156 non-null  object\n",
-      " 3   total_daily      69156 non-null  int64 \n",
-      " 4   breakfast_units  69156 non-null  int64 \n",
-      " 5   lunch_units      69156 non-null  int64 \n",
-      " 6   dinner_units     69156 non-null  int64 \n",
-      " 7   tot_meals        69156 non-null  int64 \n",
-      " 8   aib_tot          69156 non-null  int64 \n",
-      " 9   sce_tot          69156 non-null  int64 \n",
-      " 10  hpp_tot          69156 non-null  int64 \n",
-      " 11  tot_serv_pp      69156 non-null  int64 \n",
-      "dtypes: int64(9), object(3)\n",
-      "memory usage: 6.3+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sccd.info()"
+    "# sccd.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
+   "id": "1d190d6c-2c51-4dec-a22c-d2ccbb1b3a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sccd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "3b1a89e0-9a7a-4ca8-b1bc-c1a242e2933d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dftaid\n",
-      "35D01    342\n",
-      "35K01    338\n",
-      "64901    323\n",
-      "350      315\n",
-      "45T01    307\n",
-      "        ... \n",
-      "35B02    179\n",
-      "3AP04    160\n",
-      "23F02    118\n",
-      "12H03    104\n",
-      "41G01     10\n",
-      "Length: 287, dtype: int64\n",
-      "\n",
-      "provider_name\n",
-      "Senior Center - Carter Burden Covello ISC    342\n",
-      "Senior Center - Lenox Hill Innovative        338\n",
-      "Senior Center - SAGE Innovative              323\n",
-      "Senior Center - Sirovich ISC                 315\n",
-      "Senior Center - Selfhelp Innovative          307\n",
-      "                                            ... \n",
-      "Senior Center - A. Philip Randolph           179\n",
-      "Senior Center - SAGE Staten Island           160\n",
-      "Senior Center - Armstrong Senior Program     118\n",
-      "Senior Center - RAIN Bailey                  104\n",
-      "Senior Center - CCNS Hillcrest                10\n",
-      "Length: 287, dtype: int64\n",
-      "\n",
-      "service_date\n",
-      "01/15/2020    286\n",
-      "07/31/2019    286\n",
-      "07/10/2019    286\n",
-      "01/29/2020    286\n",
-      "10/30/2019    285\n",
-      "             ... \n",
-      "08/11/2019     11\n",
-      "10/20/2019     10\n",
-      "09/29/2019      9\n",
-      "12/01/2019      8\n",
-      "09/01/2019      7\n",
-      "Length: 366, dtype: int64\n",
-      "\n",
-      "total_daily\n",
-      "1      1378\n",
-      "2       776\n",
-      "6       635\n",
-      "3       626\n",
-      "5       612\n",
-      "       ... \n",
-      "565       1\n",
-      "579       1\n",
-      "581       1\n",
-      "583       1\n",
-      "968       1\n",
-      "Length: 603, dtype: int64\n",
-      "\n",
-      "breakfast_units\n",
-      "0      51998\n",
-      "40       543\n",
-      "28       468\n",
-      "20       419\n",
-      "25       407\n",
-      "       ...  \n",
-      "194        1\n",
-      "192        1\n",
-      "184        1\n",
-      "157        1\n",
-      "222        1\n",
-      "Length: 200, dtype: int64\n",
-      "\n",
-      "lunch_units\n",
-      "0      19563\n",
-      "60      1022\n",
-      "50       661\n",
-      "70       653\n",
-      "40       640\n",
-      "       ...  \n",
-      "406        1\n",
-      "408        1\n",
-      "410        1\n",
-      "412        1\n",
-      "600        1\n",
-      "Length: 415, dtype: int64\n",
-      "\n",
-      "dinner_units\n",
-      "0      65751\n",
-      "12        85\n",
-      "7         83\n",
-      "9         82\n",
-      "10        80\n",
-      "       ...  \n",
-      "173        1\n",
-      "165        1\n",
-      "164        1\n",
-      "141        1\n",
-      "325        1\n",
-      "Length: 176, dtype: int64\n",
-      "\n",
-      "tot_meals\n",
-      "0      18008\n",
-      "60       782\n",
-      "70       565\n",
-      "50       542\n",
-      "55       516\n",
-      "       ...  \n",
-      "497        1\n",
-      "499        1\n",
-      "504        1\n",
-      "506        1\n",
-      "619        1\n",
-      "Length: 516, dtype: int64\n",
-      "\n",
-      "aib_tot\n",
-      "0      22866\n",
-      "1       9256\n",
-      "2       6333\n",
-      "3       4916\n",
-      "4       3978\n",
-      "       ...  \n",
-      "111        1\n",
-      "98         1\n",
-      "109        1\n",
-      "106        1\n",
-      "281        1\n",
-      "Length: 139, dtype: int64\n",
-      "\n",
-      "sce_tot\n",
-      "0      19402\n",
-      "6       1700\n",
-      "13      1530\n",
-      "12      1516\n",
-      "7       1472\n",
-      "       ...  \n",
-      "223        1\n",
-      "214        1\n",
-      "212        1\n",
-      "211        1\n",
-      "538        1\n",
-      "Length: 242, dtype: int64\n",
-      "\n",
-      "hpp_tot\n",
-      "0      22143\n",
-      "10      1484\n",
-      "11      1408\n",
-      "12      1375\n",
-      "14      1365\n",
-      "       ...  \n",
-      "253        1\n",
-      "262        1\n",
-      "266        1\n",
-      "267        1\n",
-      "497        1\n",
-      "Length: 275, dtype: int64\n",
-      "\n",
-      "tot_serv_pp\n",
-      "0      4345\n",
-      "1      1830\n",
-      "2      1141\n",
-      "21      920\n",
-      "28      894\n",
-      "       ... \n",
-      "284       1\n",
-      "331       1\n",
-      "408       1\n",
-      "407       1\n",
-      "693       1\n",
-      "Length: 455, dtype: int64\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Get the unique values in each column, and count the number of rows for each unique value\n",
-    "for column in sccd.columns:\n",
-    "    print(f'{sccd.value_counts(column)}\\n')"
+    "# # Get the unique values in each column, and count the number of rows for each unique value\n",
+    "# for column in sccd.columns:\n",
+    "#     print(f'{sccd.value_counts(column)}\\n')"
    ]
   },
   {
@@ -504,10 +157,10 @@
     "* Data is from one contract year, fiscal year 2020 (July 2019 - June 2020)\n",
     "* 69,156 rows, 12 columns\n",
     "* Each row is a specific date of participation at a specific senior center\n",
-    "* There are 287 programs (dftaid) of the provider/contract/service type Senior Centers\n",
+    "* There are 287 programs/senior centers (`dftaid`)\n",
     "\n",
     "#### What are my grouping/categorical columns:\n",
-    "* Needs to be derived --> Borough, ReportedMonth, SponsorName\n",
+    "* Needs to be derived --> Service Month\n",
     "\n",
     "#### What are my numerical columns:\n",
     "* `total_daily` (total clients service, i.e. instances of service, for service date)\n",
@@ -519,6 +172,86 @@
     "* `aib_tot` (total clients served for AIB service, i.e. Assistance, Information and Benefits, for date)\n",
     "* `sce_tot` (total clients served for SCE service, i.e. Education, Recreation, Technology, for date)\n",
     "* `hpp_tot` (total clients served for HPP service, i.e. Health Promotion (Evidence-Based and Non-Evidence-Based) for date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3145b7fd-1bd7-43f7-955f-3b9a8655420c",
+   "metadata": {},
+   "source": [
+    "## Exploring Senior Center Provider Data\n",
+    "`senior_center_provider_data_fy2020.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3db8da03-03c4-4a65-be6a-16566827b937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scpd.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3813aa02-7d4a-400f-a4c3-cf204726765e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# scpd.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "985d1e27-6483-4841-babe-7a230ed938e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Get the unique values in each column, and count the number of rows for each unique value\n",
+    "# for column in scpd.columns:\n",
+    "#     print(f'{scpd.value_counts(column)}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6308197-a83c-48dd-b7d9-2e5783afb9cd",
+   "metadata": {},
+   "source": [
+    "#### What's in this dataset?\n",
+    "* Data is from one contract year, fiscal year 2020 (July 2019 - June 2020)\n",
+    "* 294 rows, 49 columns\n",
+    "* Each row is a specific program/senior center (`DFTA ID`)\n",
+    "\n",
+    "#### What are my grouping/categorical columns:\n",
+    "* To derive: Operational Hours (Weekdays vs. Full-Week), Part-Time Employee Status (Has PTE, Has No PTE), HHS Affiliation (HHS-Affiliated, No Reported Affiliation)\n",
+    "* `Site Type` (program site type: Neighborhood Senior Centers, Innovative Senior Centers, Senior Center)\n",
+    "* `Borough/City`\n",
+    "* `Meal Prep1` (program prepares meal in-house: Meal Prep on-site, Catered, Both, Not Applicable)\n",
+    "* `Prep for Others1` (contract prepares meals for other sites: No, Yes)\n",
+    "\n",
+    "#### What are my numerical columns:\n",
+    "* To derive: % Budget for Personnel, % Budget for Meals, % Budget for AIB, SCE, & HPP Services\n",
+    "* `FY 20 Budget` (contract annual budget amount)\n",
+    "* `FY 20 Reimbursement` (total reported expenses for year)\n",
+    "* `# of Full-time Staff`\n",
+    "* `# of Part-time Staff`\n",
+    "* `Months in HHS` (number of months provider gives services under HHS umbrella)\n",
+    "* `Total FY20 Budget` (contract annual budget amount)\n",
+    "* `Total FY20 Personnel Budget` (total personnel budget)\n",
+    "* `Total FY20 Reimbursement` (total reported expenses for year)\n",
+    "* `Average Daily Participants` (average number of daily client participants)\n",
+    "* `Kosher Raw Food/ Disposable'` (kosher meal budget)\n",
+    "* `Non-Kosher Raw Food/ Disposable` (non-kosher meal budget)\n",
+    "* `Total Raw Food/ Disposable` (total meal budget)\n",
+    "* `Expenditures per Meal for Food and Disposable` (average cost per meal per person)\n",
+    "* `Annual Expenditures for Information and Assistance, Education and Recreation, Health Promotion` (total expenditures for aib, sce, & hpp services)\n",
+    "* `Annual Expenditures Per Client for Information and Assistance, Education and Recreation, Health Promotion` (average cost per participant/client for services)\n",
+    "* `Ultilization` (contractor utilization for year, i.e. how effectively resources and services have been used to meet the requirements of contract w/ NYC Dept. of Aging)"
    ]
   }
  ],
