Rename exploratory_data_analysis.ipynb to understanding_raw_data.ipynb for accuracy

--- a/understanding_raw_data.ipynb
+++ b/understanding_raw_data.ipynb
@@ -5,19 +5,18 @@
    "id": "eb2b5b39-932f-47a4-b392-a650ccd040f3",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis\n",
+    "# Understanding the Raw Data\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "a6c96f47-c995-4578-ad1d-7a269f319a61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns"
+    "import pandas as pd"
    ]
   },
   {
