Change columns with uppercase strings to title-case

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -748,7 +748,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
+   "id": "068de82d-5958-459c-9b4d-ea6df2aa84dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Title-case columns with strings\n",
+    "str_cols = ['Senior Center Name', 'Site Type', 'Borough', 'Meal Prep Type']\n",
+    "\n",
+    "for col in str_cols:\n",
+    "    scpd[col] = scpd[col].str.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "a016d652-5849-4bb0-959c-39580e481439",
    "metadata": {},
    "outputs": [
@@ -771,31 +785,31 @@
       "Length: 294, dtype: int64\n",
       "\n",
       "Senior Center Name\n",
-      "FOREST HILLS NEIGHBORHOOD SENIOR CENTER                        2\n",
-      "PSS ANDREW JACKSON NEIGHBORHOOD SR CT                          1\n",
-      "RAIN BOSTON SECOR NEIGHBORHOOD SR CTR                          1\n",
-      "RAIN BOSTON ROAD NEIGHBORHOOD SENIOR C                         1\n",
-      "RAIN BOSTON EAST NEIGHBORHOOD SENIOR CT                        1\n",
+      "Forest Hills Neighborhood Senior Center                        2\n",
+      "Pss Andrew Jackson Neighborhood Sr Ct                          1\n",
+      "Rain Boston Secor Neighborhood Sr Ctr                          1\n",
+      "Rain Boston Road Neighborhood Senior C                         1\n",
+      "Rain Boston East Neighborhood Senior Ct                        1\n",
       "                                                              ..\n",
-      "GODDARD RIVERSIDE NEIGHBORHOOD SC                              1\n",
-      "GLENMORE SOCIAL CLUB                                           1\n",
-      "GAYLORD WHITE NEIGHBORHOOD SENIOR CENTER                       1\n",
-      "FORT INDEPENDENCE SOCIAL CLUB                                  1\n",
-      "YOUNG MENS AND WOMENS HEBREW ASSO WASHINGTON HEIGHTS INWOOD    1\n",
+      "Goddard Riverside Neighborhood Sc                              1\n",
+      "Glenmore Social Club                                           1\n",
+      "Gaylord White Neighborhood Senior Center                       1\n",
+      "Fort Independence Social Club                                  1\n",
+      "Young Mens And Womens Hebrew Asso Washington Heights Inwood    1\n",
       "Length: 293, dtype: int64\n",
       "\n",
       "Site Type\n",
-      "NEIGHBORHOOD SENIOR CENTERS    271\n",
-      "INNOVATIVE SENIOR CENTERS       18\n",
-      "SENIOR CENTER                    5\n",
+      "Neighborhood Senior Centers    271\n",
+      "Innovative Senior Centers       18\n",
+      "Senior Center                    5\n",
       "dtype: int64\n",
       "\n",
       "Borough\n",
-      "BROOKLYN         97\n",
-      "MANHATTAN        73\n",
-      "BRONX            56\n",
-      "QUEENS           56\n",
-      "STATEN ISLAND    12\n",
+      "Brooklyn         97\n",
+      "Manhattan        73\n",
+      "Bronx            56\n",
+      "Queens           56\n",
+      "Staten Island    12\n",
       "dtype: int64\n",
       "\n",
       "Contract From Date\n",
@@ -991,7 +1005,7 @@
       "Length: 241, dtype: int64\n",
       "\n",
       "Meal Prep Type\n",
-      "Meal Prep on-site    149\n",
+      "Meal Prep On-Site    149\n",
       "Catered              101\n",
       "Both                  13\n",
       "Not Applicable         4\n",
